# audio-libraries-tlk

./: .gitignore  README.md  Todo.md  __main__.py  audio_library_scan_app.py  convertion_functions.py  edit_music_tags.py  exloration.ipynb  install.bat  install.sh  itunes_lib_scan.py  main.py  minidisc_labels_app.py  parameters.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
audio_libs_tlk.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  convertion_functions.py  create_md_labels.py  edit_cover_artwork.py  edit_music_tags.py  folder_lib_scan.py  itunes_lib_scan.py  lib_scan.py  library_scanner.py  main.py  parameters.py  processing_lib.py
src/audio-libs-tlk/: __main__.py  create_md_labels.py  edit_cover_artwork.py  lib_scan.py  main_minidisc_cli.py  parameters.py  processing_lib.py
src/audio_libraries_tlk/: edit_cover_artwork.py
src/audio_libs_tlk/: __main__.py  create_md_labels.py  folder_lib_scan.py  itunes_lib_scan.py  lib_scan.py  parameters.py  processing_lib.py
src/audio_libs_tlk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_tlk.py
