[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "audio-libraries-tlk"
version = "1.2.0"
authors = [
  { name="Benoît Gaston", email="benoitgaston59@gmail.com" },
]
packages = [
    { include = "audio_libs_tlk", from = "src" }  # Specifies that 'audio_libs_tlk' is in the 'src' folder
]

description = "A package to extract and manipulate data contained in a music library such as playlists or album cover artwork."

readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BenoitGaston/audio-libraries-tlk"
Issues = "https://github.com/BenoitGaston/audio-libraries-tlk/issues"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.setuptools.packages.find]
where = ["./src/",]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.entry_points]
console_scripts = [
    "audio_library_scan_app = audio_libs_tlk.audio_library_scan_app:main",  # Entry point for the first app
    "minidisc_labels_app = audio_libs_tlk.minidisc_labels_app:main",   # Entry point for the second app
]
